# universal-watcher

./: LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
src/universal-watcher/core/: setup.py
src/universal-watcher/core/classes/data_source/: data_source_parameters.py
src/universal-watcher/core/classes/formatter/: formatter.py
src/universal-watcher/core/classes/notification_platform/: notification_platform.py
src/universal-watcher/core/decorators/: injector.py
src/universal-watcher/core/services/: data_source_registry_service.py
src/universal-watcher/data_sources/bazos_sk/: bazos_sk_data_source.py  config.py
src/universal-watcher/data_sources/bazos_sk/formatters/: config.py
src/universal-watcher/data_sources/bazos_sk/models/: bazos_sk_parameters.py
src/universal-watcher/data_sources/bazos_sk/services/: bazos_sk_db_service.py  (+1 more)
src/universal_watcher/: __init__.py  watcher.py
src/universal_watcher/core/: setup.py
src/universal_watcher/core/models/: watcher_model.py
src/universal_watcher/core/services/: data_source_registry_service.py  db_service.py  notification_registry_service.py
src/universal_watcher/data_sources/bazos_cz/: bazos_cz_data_source.py  config.py
src/universal_watcher/data_sources/bazos_sk/: bazos_sk_data_source.py
src/universal_watcher/notification_platforms/email/: email_notificaton_platform.py
src/watcher/: watcher.py
src/watcher/core/services/: db_service.py  notification_registry_service.py
src/watcher/notification_platforms/email/: config.py  email_notificaton_platform.py
(+36 files in other folders)
