[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/universal_watcher"]

[project]
name = "universal_watcher"
version = "0.1.17"
dependencies = [
    "pydantic>=2.0",
    "tinydb>=4.7.0",
    "requests>=2.25.0",
    "jinja2>=3.0.0"
]
authors = [
  { name="Šimon Nehéz" },
]
description = "A universal watcher extendable for any kind of data."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/simon-ne/universal-watcher"
Issues = "https://github.com/simon-ne/universal-watcher/issues"